--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,18 @@
             <artifactId>plexus-container-default</artifactId>
             <version>1.0-alpha-9-stable-1</version>
         </dependency>
+        <!--jgit-->
+        <dependency>
+            <groupId>com.madgag</groupId>
+            <artifactId>org.eclipse.jgit</artifactId>
+            <version>2.99.99.2.0-UNOFFICIAL-ROBERTO-RELEASE</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>jsch</artifactId>
+                    <groupId>com.jcraft</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
